2009-11-23  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add package download and repository synchronisation machinery.

	* src/pkgstrm.h: New header file.

	* src/pkgbind.cpp, src/pkginet.cpp, src/pkgstrm.cpp,
	src/pkgfind.cpp, src/pkgname.cpp, src/keyword.c: New files.
	* Makefile.in (CORE_DLL_OBJECTS): Add build goals for them.

	* xml: New directory.

	* src/climain.cpp (climain): Establish repository bindings from...
	* xml/profile.xml: ...this new configuration file.

2009-11-16  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add XML database bindings and preliminary action executive for CLI.

	* src/pkgbase.h, src/pkgtask.h,
	src/mkpath.h, src/vercmp.h: New header files.

	* src/climain.cpp, src/pkgexec.cpp, src/pkgspec.cpp,
	src/mkpath.c, src/vercmp.cpp, src/xmlfile.c: New files.

	* Makefile.in (CORE_DLL_OBJECTS): Define initial set of files...
	(mingw-get-0.dll): ...build them into this new DLL target; add it...
	(all): ...as prerequisite for this primary build goal.

2009-11-12  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Avoid some potential GCC warnings.

	* src/clistub.c: Include process.h for `execv' prototype...
	(main): Cast `argv' to appropriately matched type when calling it.

	* src/pkginfo/driver.c: Include stdlib.h for `free' prototype.

2009-11-11  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Create diagnostic message handler for CLI usage.

	* src/dmh.h: New header file; it defines the public interface.
	* src/dmh.cpp: New file; it implements the message handler.

2009-11-05  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct some identified TinyXML issues.

	* tinyxml/tinyxml.h (IsWhiteSpace): Add FIXME annotation to flag
	probable redundancy of checks for '\n' and '\r'.
	* tinyxml/tinyxmlparser.cpp: Revert John E's 2008-08-09 change; remove
	all such redundancies in IsWhiteSpace() calls throughout.

	* tinyxml/tinyxml.cpp (TiXmlAttribute::SetDoubleValue): Correct format